Fix for vertical alignment of elements on user panel

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,5 @@
 div#menu-wrapper{ width: 100%; }
+div#menu-wrapper .navbar ul.nav li a{ line-height: 32px; }
 
 div#wrapper{
     width: 80%;
